--- a/index.html
+++ b/index.html
@@ -730,8 +730,8 @@
 }
 
 .saturday-heading {
-  text-align: center;
-  margin-left: 0;
+  text-align: right;
+  margin-right: 2rem;
 }
 
 .reverse-layout {
@@ -768,6 +768,12 @@
     max-width: 90%;
   }
 }
+
+    .sunday-heading {
+  text-align: left;
+  margin-left: 2rem;
+}
+
 
 
 
@@ -868,7 +874,7 @@
         </p>
       </div>
       <div class="sub-event-image">
-        <img src="ruit-v1.png" alt="Ruit Night">
+        <img src="ruit-v2.png" alt="Ruit Night">
       </div>
     </div>
   </div>
@@ -902,7 +908,7 @@
 
       <div class="sub-event-row reverse-layout">
         <div class="sub-event-image">
-          <img src="chapter-meeting.png" alt="Chapter Meeting">
+          <img src="meeting-v1.png" alt="Chapter Meeting">
         </div>
         <div class="sub-event-text">
           <h3>Active/Alumni Chapter Meeting</h3>
@@ -960,22 +966,31 @@
   </div>
 </div>
 
-  <!-- SUNDAY -->
+ <!-- SUNDAY -->
+<div class="day-container">
+  <h2 class="day-heading sunday-heading">Sunday – October 19th</h2>
   <div class="day-card" data-aos="fade-up" data-aos-delay="300">
     <div class="day-content">
-      <h2 class="day-heading">Sunday – October 19th</h2>
-
-      <h3>Farewell Barbeque</h3>
-      <div class="day-meta">
-        <span>📍 La Jolla Shores Park</span>
-        <span>🕚 11:00am – 2:00pm</span>
+      <div class="sub-event-row reverse-layout">
+        <div class="sub-event-image">
+          <img src="bbq-v2.png" alt="Farewell Barbeque">
+        </div>
+        <div class="sub-event-text">
+          <h3>Farewell Barbeque</h3>
+          <div class="day-meta">
+            <span>📍 La Jolla Shores Park</span>
+            <span>🕚 11:00am – 2:00pm</span>
+          </div>
+          <p>
+            One last hug, one last plate, and a group photo by the sea. 
+            Bring the whole family for brunch on the beach as we close out 40 unforgettable years.
+          </p>
+        </div>
       </div>
-      <p>
-        One last hug, one last plate, and a group photo by the sea. 
-        Bring the whole family for brunch on the beach as we close out 40 unforgettable years.
-      </p>
     </div>
   </div>
+</div>
+
 </section>
 
 
