--- a/index.html
+++ b/index.html
@@ -726,12 +726,12 @@
 
 .day-heading {
   text-align: left;
-  margin-left: 2rem;
+  margin-left: 4rem;
 }
 
 .saturday-heading {
   text-align: right;
-  margin-right: 2rem;
+  margin-right: 3rem;
 }
 
 .reverse-layout {
@@ -771,7 +771,7 @@
 
     .sunday-heading {
   text-align: left;
-  margin-left: 2rem;
+  margin-left: 4rem;
 }
 
 
@@ -928,7 +928,7 @@
 
       <div class="sub-event-row reverse-layout">
         <div class="sub-event-image">
-          <img src="pub-crawl.png" alt="Pub Crawl">
+          <img src="crawl-v1.png" alt="Pub Crawl">
         </div>
         <div class="sub-event-text">
           <h3>Pub Crawl</h3>
@@ -957,7 +957,7 @@
           </div>
           <p>
             After recovering from the events of the afternoon, the active chapter of Kappa Rho is pleased to invite you to our <b>cornerstone event of the weekend.</b> 
-            Just behind Shores Diner (formerly known as Porter's Pub).
+            Join us for a catered dinner and cash bar 
           </p>
         </div>
       </div>
@@ -966,15 +966,12 @@
   </div>
 </div>
 
- <!-- SUNDAY -->
+<!-- SUNDAY -->
 <div class="day-container">
   <h2 class="day-heading sunday-heading">Sunday – October 19th</h2>
   <div class="day-card" data-aos="fade-up" data-aos-delay="300">
     <div class="day-content">
-      <div class="sub-event-row reverse-layout">
-        <div class="sub-event-image">
-          <img src="bbq-v2.png" alt="Farewell Barbeque">
-        </div>
+      <div class="sub-event-row">
         <div class="sub-event-text">
           <h3>Farewell Barbeque</h3>
           <div class="day-meta">
@@ -982,14 +979,17 @@
             <span>🕚 11:00am – 2:00pm</span>
           </div>
           <p>
-            One last hug, one last plate, and a group photo by the sea. 
-            Bring the whole family for brunch on the beach as we close out 40 unforgettable years.
+            To conclude our incredible weekend, bring the whole family out for barbeque on the beach as we close out <b>40 unforgettable years</b>.
           </p>
+        </div>
+        <div class="sub-event-image">
+          <img src="bbq-v2.png" alt="Farewell Barbeque">
         </div>
       </div>
     </div>
   </div>
 </div>
+
 
 </section>
 
