--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
 
 .saturday-heading {
   text-align: right;
-  margin-right: 3rem;
+  margin-right: 4rem;
 }
 
 .reverse-layout {
@@ -889,7 +889,7 @@
 
       <div class="sub-event-row reverse-layout">
         <div class="sub-event-image">
-          <img src="sat-checkin.png" alt="Secondary Check-In">
+          <img src="secondary-v1.png" alt="Secondary Check-In">
         </div>
         <div class="sub-event-text">
           <h3>Secondary Check In</h3>
@@ -947,7 +947,7 @@
 
       <div class="sub-event-row reverse-layout">
         <div class="sub-event-image">
-          <img src="shores-map.png" alt="Cocktail Reception">
+          <img src="reception-v1.png" alt="Cocktail Reception">
         </div>
         <div class="sub-event-text">
           <h3>Cocktail Reception</h3>
