--- a/index.html
+++ b/index.html
@@ -973,6 +973,10 @@
 
     </div>
   </div>
+  <div class="snake-container" style="top: 80%; left: 5%;">
+  <img src="snakeSword.png" class="snake snake-left" alt="Snake Left">
+</div>
+
 </div>
 
 <!-- SUNDAY -->
