--- a/index.html
+++ b/index.html
@@ -860,7 +860,8 @@
         </div>
         <p>
           Join us as we kick off the weekend in SNU territory with an afternoon of <b>wings, brotherhood, and beer</b> at Dirty Birds (formerly Round Table Pizza). 
-          Come and check in to receive your commemorative Kappa Rho <b>merchandise and wristband</b> (see below), which will serve as your <b>ticket to all events</b> throughout the weekend.
+          Come and check in to receive your commemorative Kappa Rho <b>merchandise and wristband</b> (see below), which will serve as your <b>ticket to all events</b> throughout 
+          the weekend. (All Welcome)
         </p>
       </div>
       <div class="sub-event-image">
@@ -879,7 +880,8 @@
         </div>
         <p>
           After the buzz of old stories and booze has set in, join us as we make our way to a chapter house to <b>re-live and reinvigoroute your youth</b>.
-          Test your <b>Beirut skills</b> against the champions of today and the legends of the past as we come together and enjoy the debauchery of <b>Kappa Rho's signature pastime</b>.
+          Test your <b>Beirut skills</b> against the champions of today and the legends of the past as we come together and enjoy the debauchery of <b>Kappa Rho's signature 
+            pastime</b>. (Brothers Only)
         </p>
       </div>
       <div class="sub-event-image">
@@ -928,7 +930,8 @@
           <p>
             Join as us we come together as both the active and alumni chapters to conduct an <b>all-chapter meeting.</b> 
             Throw yourself back into the <b>ritual and tradition</b> never forgotten from your days as an active member. 
-            Write some <b>brother zeros</b> for those brothers who haven't caught enough heat for the mischief they've been up to post-grad, and catch up on what the active chapter is currently working on.
+            Write some <b>brother zeros</b> for those brothers who haven't caught enough heat for the mischief they've been up to post-grad, 
+            and catch up on what the active chapter is currently working on. (Brothers Only)
           </p>
         </div>
       </div>
@@ -966,7 +969,7 @@
           </div>
           <p>
             After recovering from the events of the afternoon, the active chapter of Kappa Rho is pleased to invite you to our <b>cornerstone event of the weekend.</b> 
-            Join us for a catered dinner and cash bar 
+            Join us for a catered dinner and cash bar (Plus One Welcome, more details for plus ones TBA)
           </p>
         </div>
       </div>
@@ -992,7 +995,7 @@
             <span>🕚 11:00am – 2:00pm</span>
           </div>
           <p>
-            To conclude our incredible weekend, bring the whole family out for barbeque on the beach as we close out <b>40 unforgettable years</b>.
+            To conclude our incredible weekend, bring the whole family out for barbeque on the beach as we close out <b>40 unforgettable years</b>. (Family Welcome)
           </p>
         </div>
         <div class="sub-event-image">
