--- a/index.html
+++ b/index.html
@@ -785,6 +785,33 @@
   margin-left: 4rem;
 }
 
+    html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+.blob,
+.blob-white,
+.blob-ruby,
+.extra-gold,
+.extra-blue,
+body::before,
+body::after,
+.snake-container,
+.seal-container {
+  max-width: 100vw;
+  overflow: hidden;
+  pointer-events: none;
+}
+
+
   
 
 
@@ -861,7 +888,7 @@
         <p>
           Join us as we kick off the weekend in SNU territory with an afternoon of <b>wings, brotherhood, and beer</b> at Dirty Birds (formerly Round Table Pizza). 
           Come and check in to receive your commemorative Kappa Rho <b>merchandise and wristband</b> (see below), which will serve as your <b>ticket to all events</b> throughout 
-          the weekend. (All Welcome)
+          the weekend. <i>(All Welcome)</i>
         </p>
       </div>
       <div class="sub-event-image">
@@ -881,7 +908,7 @@
         <p>
           After the buzz of old stories and booze has set in, join us as we make our way to a chapter house to <b>re-live and reinvigoroute your youth</b>.
           Test your <b>Beirut skills</b> against the champions of today and the legends of the past as we come together and enjoy the debauchery of <b>Kappa Rho's signature 
-            pastime</b>. (Brothers Only)
+            pastime</b>. <i>(Brothers Only)</i>
         </p>
       </div>
       <div class="sub-event-image">
@@ -931,7 +958,7 @@
             Join as us we come together as both the active and alumni chapters to conduct an <b>all-chapter meeting.</b> 
             Throw yourself back into the <b>ritual and tradition</b> never forgotten from your days as an active member. 
             Write some <b>brother zeros</b> for those brothers who haven't caught enough heat for the mischief they've been up to post-grad, 
-            and catch up on what the active chapter is currently working on. (Brothers Only)
+            and catch up on what the active chapter is currently working on. <i>(Brothers Only)</i>
           </p>
         </div>
       </div>
@@ -969,7 +996,10 @@
           </div>
           <p>
             After recovering from the events of the afternoon, the active chapter of Kappa Rho is pleased to invite you to our <b>cornerstone event of the weekend.</b> 
-            Join us for a catered dinner and cash bar (Plus One Welcome, more details for plus ones TBA)
+            Join us for a catered dinner and cash bar for a time of fellowship and celebration with one another. About halfway through our evening, we will have a keynote address
+            from the Eminent Commander and other chapter representives with exciting announcements, honors, and more for our incredible chapter and its history. Following this address,
+            our DJ will come out and the evening will transition into an after party, and the bar will stay open for as long as we can take!
+            <i>(Plus One Welcome, more details for plus ones TBA)</i>
           </p>
         </div>
       </div>
@@ -995,7 +1025,7 @@
             <span>🕚 11:00am – 2:00pm</span>
           </div>
           <p>
-            To conclude our incredible weekend, bring the whole family out for barbeque on the beach as we close out <b>40 unforgettable years</b>. (Family Welcome)
+            To conclude our incredible weekend, bring the whole family out for barbeque on the beach as we close out <b>40 unforgettable years</b>. <i>(Family Welcome)</i>
           </p>
         </div>
         <div class="sub-event-image">
