--- a/index.html
+++ b/index.html
@@ -971,9 +971,9 @@
           </div>
           <p>
             After recovering from the events of the afternoon, the active chapter of Kappa Rho is pleased to invite you to our <b>cornerstone event of the weekend.</b> 
-            Join us for a catered dinner and cash bar for a time of fellowship and celebration with one another. About halfway through our evening, we will have a keynote address
+            Join us for a <b>catered dinner and cash bar</b> for a time of fellowship and celebration with one another. About halfway through our evening, we will have a <b>keynote address</b>
             from the Eminent Commander and other chapter representives with exciting announcements, honors, and more for our incredible chapter and its history. Following this address,
-            our DJ will come out and the evening will transition into an after party, and the bar will stay open for as long as we can take!
+            the evening will transition into an <b>after party</b> type of celebration, and the bar will stay open for as long as we can take!
             <i>(Plus One Welcome, more details for plus ones TBA)</i>
           </p>
         </div>
@@ -1018,7 +1018,7 @@
 
   
   <section class="tiers-section" id="tiers">
-  <p class="subtitle">- Select your commemorative tier package - <br>All tiers come with a food and drink ticket (as seen in basic tier) which will provide you <br>with 
+  <p class="subtitle">- Select your commemorative tier package - <br>All tiers come with a food and drink ticket (as seen in rock tier) which will provide you <br>with 
     dinner and one free drink at the cocktail reception on Saturday.</p>
   <p class="subtitle"><i>*Designs are not final and subject to slight modifications*</i></p>
   <div class="tiers">
