--- a/index.html
+++ b/index.html
@@ -826,6 +826,15 @@
   <img src="sealStylized.png" class="sn-seal" alt="Sigma Nu Seal">
 </div>
 
+  <div class="snake-container" style="top: 60%; left: 5%;">
+  <img src="snakeSword.png" class="snake snake-left" alt="Snake Left">
+</div>
+
+  <div class="seal-container" style="top: 95%; right: 5%;">
+  <img src="sealStylized.png" class="sn-seal" alt="Sigma Nu Seal">
+</div>
+
+
 
 
 
@@ -981,9 +990,7 @@
 
     </div>
   </div>
-  <div class="snake-container" style="top: 80%; left: 5%;">
-  <img src="snakeSword.png" class="snake snake-left" alt="Snake Left">
-</div>
+  
 
 </div>
 
