--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
         </p>
       </div>
       <div class="sub-event-image">
-        <img src="dbs-check-in-v2.png" alt="Check In">
+        <img src="dbs-check-in.png" alt="Check In">
       </div>
     </div>
 
