--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
     </div>
 
     <div class="tier" id="premium-tier" data-aos="fade-up" data-aos-delay="800">
-      <img src="tier-premium-new.png" alt="Premium Tier" />
+      <img src="white-rose-final.png" alt="Premium Tier" />
       <div class="price">$500</div>
       <a class="button" href="https://legfi.com/app/events/kp40theternal/2838">Purchase/RSVP</a>
     </div>
