--- a/index.html
+++ b/index.html
@@ -946,8 +946,9 @@
           <p>
             Join as us we come together as both the active and alumni chapters to conduct an <b>all-chapter meeting.</b> 
             Throw yourself back into the <b>ritual and tradition</b> never forgotten from your days as an active member. 
-            Write some <b>brother zeros</b> for those brothers who haven't caught enough heat for the mischief they've been up to post-grad, 
-            and catch up on what the active chapter is currently working on. <i>(Brothers Only)</i>
+            Write some <b>brother zeros</b> for those brothers who haven't caught enough heat for the mischief they've been up to post-grad, or shoutout 
+            some <b>brother heroes</b> who deserve some recognition for what they've accomplished.
+            <i>(Brothers Only)</i>
           </p>
         </div>
       </div>
