--- a/legacy.html
+++ b/legacy.html
@@ -66,7 +66,7 @@
   
   <script>
     var pass = prompt("Enter password:");
-    if (pass !== "legacy2025") {
+    if (pass !== "kp") {
       alert("Incorrect password.");
       window.location.href = "/";
     }
