--- a/legacy.html
+++ b/legacy.html
@@ -58,6 +58,58 @@
       color: #666;
       padding: 2rem 1rem;
     }
+
+
+    .hero-header {
+  position: relative;
+  height: 100vh;
+  background-color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.legacy-logo {
+  width: 300px;
+  max-width: 90%;
+  z-index: 2;
+  animation: floatUpDown 5s ease-in-out infinite;
+  opacity: 0;
+  animation: fadeIn 1s ease-out forwards, floatUpDown 5s ease-in-out infinite;
+}
+
+.glow-bg {
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  background: radial-gradient(circle, rgba(255, 255, 255, 0.4), transparent 70%);
+  filter: blur(80px);
+  animation: glowPulse 3s ease-in-out infinite;
+  z-index: 1;
+}
+
+/* Floating animation */
+@keyframes floatUpDown {
+  0%   { transform: translateY(0px); }
+  50%  { transform: translateY(-10px); }
+  100% { transform: translateY(0px); }
+}
+
+/* Subtle pulsing glow */
+@keyframes glowPulse {
+  0%   { transform: scale(1); opacity: 0.5; }
+  50%  { transform: scale(1.05); opacity: 0.7; }
+  100% { transform: scale(1); opacity: 0.5; }
+}
+
+/* Fade in animation */
+@keyframes fadeIn {
+  to { opacity: 1; }
+}
+
+
+    
   </style>
 </head>
 
@@ -73,11 +125,16 @@
   </script>
   
 
-  <header>
-    <img src="legacy-logo.png" alt="Legacy Logo" class="logo" />
-    <h1>Kappa Rho Legacy Foundation</h1>
+  <header class="hero-header">
+    <div class="glow-bg"></div>
+    <img src="legacy-logo.png" alt="Kappa Rho Legacy Foundation Logo" class="legacy-logo floating" />
     <p class="subtitle">Honoring the past. Investing in the future.</p>
   </header>
+
+
+  
+    
+ 
 
   <main>
     <p>
