--- a/legacy.html
+++ b/legacy.html
@@ -60,14 +60,19 @@
     }
 
 
-    .hero-header {
-  position: relative;
-  height: 100vh;
-  background-color: #000;
+   .hero-header {
+  height: 100vh;               /* Fills entire screen height */
+  width: 100%;                 /* Fills full width */
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;      /* Stack elements vertically */
+  align-items: center;         /* Center items horizontally */
+  justify-content: center;     /* Center items vertically */
+  position: relative;
+  background-color: #000;
   overflow: hidden;
+  text-align: center;
+  padding: 0 1rem;             /* Padding for small screens */
+  box-sizing: border-box;
 }
 
 .legacy-logo {
@@ -127,7 +132,7 @@
 
   <header class="hero-header">
     <div class="glow-bg"></div>
-    <img src="legacy-logo.png" alt="Kappa Rho Legacy Foundation Logo" class="legacy-logo floating" />
+    <img src="legacy-logo-nobg.png" alt="Kappa Rho Legacy Foundation Logo" class="legacy-logo floating" />
     <p class="subtitle">Honoring the past. Investing in the future.</p>
   </header>
 
