--- a/legacy.html
+++ b/legacy.html
@@ -113,7 +113,7 @@
 }
 
 /* Fade in animation */
-@@keyframes fadeIn {
+@keyframes fadeIn {
   from { opacity: 0; transform: translateY(10px); }
   to   { opacity: 1; transform: translateY(0); }
 }
