--- a/legacy.html
+++ b/legacy.html
@@ -33,13 +33,15 @@
     }
 
    .subtitle {
-  font-size: 1.5rem;         /* Slightly larger text */
+  font-size: 1.5rem;
   color: #ccc;
-  margin-top: 2rem;          /* Push it down below logo */
+  margin-top: 2rem;
   font-weight: 300;
-  animation: fadeIn 1s ease-out forwards;
-  animation-delay: 1.2s; /* delay AFTER logo fades in */
+  opacity: 0;
+  animation: fadeInRise 1s ease-out forwards;
+  animation-delay: 1.2s;
 }
+
 
 
     .logo {
@@ -80,11 +82,16 @@
 }
 
 .legacy-logo {
-  width: 400px;             /* Was 300px — increase */
-  max-width: 90%;
-  animation: floatUpDown 5s ease-in-out infinite, fadeIn 1s ease-out forwards;
+  width: 500px;
+  max-width: 95%;
   opacity: 0;
+  animation-name: fadeInRise, floatUpDown;
+  animation-duration: 1s, 5s;
+  animation-timing-function: ease-out, ease-in-out;
+  animation-fill-mode: forwards, infinite;
+  animation-delay: 0s, 1s; /* fade immediately, float after fade */
 }
+
 
     
 
@@ -112,11 +119,17 @@
   100% { transform: scale(1); opacity: 0.5; }
 }
 
-/* Fade in animation */
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(10px); }
-  to   { opacity: 1; transform: translateY(0); }
+@keyframes fadeInRise {
+  from {
+    opacity: 0;
+    transform: translateY(30px); /* more dramatic rise */
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
+
 
 
     
