--- a/legacy.html
+++ b/legacy.html
@@ -41,13 +41,13 @@
       z-index: 1;
     }
 
-    .legacy-logo {
-      width: 500px;
-      max-width: 95%;
-      opacity: 0;
-      animation: fadeInOpacity 1s ease-out forwards,
-                 floatUpDown 5s ease-in-out 1s infinite;
-    }
+   .legacy-logo {
+  width: 500px;
+  max-width: 95%;
+  opacity: 0;
+  animation: fadeInOpacity 1s ease-out forwards, floatUpDown 5s ease-in-out infinite;
+}
+
 
     .subtitle {
       font-size: 1.5rem;
