--- a/index.html
+++ b/index.html
@@ -1049,19 +1049,19 @@
     <div class="tier" data-aos="fade-up" data-aos-delay="300">
       <img src="tier-rock.png" alt="Basic Tier" />
       <div class="price">$150</div>
-      <a class="button" href="https://legfi.com/app/events/kp40throck/2836">Purchase/RSVP</a>
+      <a class="button" href="https://buy.stripe.com/eVq7sK5ij4I4dEa9M4cZa07">Purchase/RSVP</a>
     </div>
 
     <div class="tier" data-aos="fade-up" data-aos-delay="500">
       <img src="tier-middle-nopin.png" alt="Middle Tier" />
       <div class="price">$300</div>
-      <a class="button" href="https://legfi.com/app/events/sigma-nu-kappa-rho-university-of-california-san-diego/2839">Purchase/RSVP</a>
+      <a class="button" href="https://buy.stripe.com/cNi7sK123gqMarYgascZa08">Purchase/RSVP</a>
     </div>
 
     <div class="tier" id="premium-tier" data-aos="fade-up" data-aos-delay="800">
       <img src="white-rose-final.png" alt="Premium Tier" />
       <div class="price">$500</div>
-      <a class="button" href="https://legfi.com/app/events/sigma-nu-kappa-rho-university-of-california-san-diego/2840">Purchase/RSVP</a>
+      <a class="button" href="https://buy.stripe.com/fZu8wOaCD6QccA69M4cZa00">Purchase/RSVP</a>
     </div>
   </section>
 
