--- a/confirmation.html
+++ b/confirmation.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Confirmation</title>
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
@@ -53,6 +54,18 @@
       box-shadow: 0 0 10px gold;
       transform: scale(1.05);
     }
+
+    @media (max-width: 600px) {
+    h1 {
+      font-size: 1.8rem;
+    }
+    p {
+      font-size: 1rem;
+    }
+    .emoji {
+      font-size: 1.5rem;
+    }
+  }
   </style>
 </head>
 <body>
